@@ -37,7 +37,7 @@ class Smarty_Internal_Compile_Function extends Smarty_Internal_CompileBase {
         // make function known for recursive calls
         $this->compiler->smarty->template_functions[$_name]['compiled'] = ''; 
         // Init temporay context
-        $compiler->template->required_plugins = array('compiled' => array(), 'cache' => array());
+        $compiler->template->required_plugins = array('compiled' => array(), 'nocache' => array());
         $compiler->template->extract_code = true;
         $compiler->template->extracted_compiled_code = '';
         $compiler->template->has_nocache_code = false;
@@ -75,11 +75,11 @@ class Smarty_Internal_Compile_Functionclose extends Smarty_Internal_CompileBase 
             } 
             $plugins_string .= '?>';
         } 
-        if (!empty($compiler->template->required_plugins['cache'])) {
+        if (!empty($compiler->template->required_plugins['nocache'])) {
             $plugins_string .= "<?php echo '/*%%SmartyNocache:{$compiler->template->properties['nocache_hash']}%%*/<?php ";
             foreach($compiler->template->required_plugins['nocache'] as $tmp) {
                 foreach($tmp as $data) {
-                    $plugins_string .= "if (!is_callable('{$data['function']}')) include '{$data['file']}';\n";
+                    $plugins_string .= "if (!is_callable(\'{$data['function']}\')) include \'{$data['file']}\';\n";
                 } 
             } 
             $plugins_string .= "?>/*/%%SmartyNocache:{$compiler->template->properties['nocache_hash']}%%*/';?>\n";
